--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_version">1</string>
-	<string name="done">Done</string>
+    <string name="email_support">Email Support</string>
+    <string name="support">Support</string>
+    <string name="database_updates">Database Updates - 6/73</string>
+    <string name="database_version">Database Version - 1.0</string>
+    <string name="app_version">App Version - 1.0</string>
+    <string name="about_sba_communications">About SBA Communications</string>
+    <string name="about">About</string>
+    <string name="coordinates">Search by Coordinates</string>
+    <string name="address">Search by Address</string>
+    <string name="site_name_id">Search by Site Name/ID</string>
+    <string name="done">Done</string>
+    <string name="back">Back</string>
     <string name="central_america">Central America</string>
     <string name="managed">Managed</string>
     <string name="owned">Owned</string>
@@ -10,17 +20,20 @@
     <string name="list_view">List View</string>
     <string name="layers">Layers</string>
     <string name="instructions">Instructions</string>
+    <string name="instructions2">Search Instructions</string>
     <string name="current_location">Current Location</string>
     <string name="enter_site">Enter Site</string>
     <string name="current">Current</string>
-
-    <string name="information1">Search Instructions\n
-    Search by Site Name/ID\n
-    Site Name Examples\n
-    ex: "Shadow" - Partial Site Name Search\n
-    ex: "Hackberry" - Full Site Name Search\n
-    Site ID Examples\n
-    ex: "FL" - Site ID Partial Search\n
-    ex: "FL98463-L" - Site ID Exact Search</string>
+	<string name="information1">Search Instructions</string>
 	<string name="app_name">SBA Sites</string>
+	<string name="site_name_examples">Site Name Examples</string>
+	<string name="ex_shadow">Ex: \"Shadow\"</string>
+	<string name="partial_site_name_search">Partial Site Name Search</string>
+	<string name="ex_hackberry">Ex: \"Hackberry\"</string>
+	<string name="full_site_name_search">Full Site Name Search\n</string>
+	<string name="site_id_examples">Site ID Examples</string>
+	<string name="ex_fl">Ex: \"FL\"</string>
+	<string name="site_id_partial_search">Site ID Partial Search</string>
+	<string name="ex_fl98463_l">Ex: \"FL98463-L\"</string>
+	<string name="site_id_exact_search">Site ID Exact Search</string>
 </resources>
