--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,5 +45,7 @@
 	<string name="longitude_without_accepted">Longitude Without \'-\' Accepted</string>
 	<string name="ex_53.5_117.2b">Without Hyphen: \"53.5,117.2\"</string>
 	<string name="symbol_is_not_required_for_long">\'-\' symbol is not required for Long</string>
+	<string name="site_name">Site Name</string>
+	<string name="userLocationClicked">userLocationClicked</string>
 
 </resources>
