Search by address and Site name/code working.  Coordinate search is crashing.
Signed-off-by: Ross Chapman <ross.chapman@me.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -77,5 +77,6 @@
 	<string name="LABEL_AGL">Grd Elev:</string>
 	<string name="LABEL_MTA">MTA:</string>
 	<string name="LABEL_BTA">BTA:</string>
+	<string name="LABEL_CANCEL">Cancel</string>
 
 </resources>
